Fixes #355 - [Survey] Quantity and Percent values should be left-aligned in Survey table. Survey Overview layout styled

--- a/web/static/css/_ncd.scss
+++ b/web/static/css/_ncd.scss
@@ -306,7 +306,17 @@ footer {
   max-height: 250px;
 }
 
-// ------- Survey Card  ----------
+
+// ------------ Survey ----------
+
+.survey-chart {
+  padding-top: 6rem;
+}
+.respondent-chart {
+  margin: .5rem 0 2rem;
+}
+
+// ------- Survey Card  ----
 
 .survey-card .card {
   @extend .black-text;
